Fixed spacing in UserDetails

--- a/src/components/UserDetails/UserDetails.scss
+++ b/src/components/UserDetails/UserDetails.scss
@@ -1,9 +1,8 @@
-$top-margin: 20px;
-
 .user-details-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   height: 80vh;
   border: 2px solid black;
   border-radius: 5px;
